# InsideOut

./: .gitignore  BACKEND_CHECKLIST.md  BACKEND_COMPLETION_REPORT.md  DEPLOYMENT_SUMMARY.md  jest.config.js  jest.setup.api.js  jest.setup.js  middleware.ts  next.config.production.mjs  package-backend.json  package.json  package.test.json  tailwind.config.ts  tsconfig.backend.json
.github/workflows/: ci-cd.yml
__tests__/api/: products.test.ts
app/: globals.css  layout.tsx  page.tsx
app/about/: page.tsx
app/accessibility/: page.tsx
app/blog/: page.tsx
app/cart/: page.tsx
app/checkout/: page.tsx
app/contact/: page.tsx
app/cookies/: page.tsx
app/events/: page.tsx
app/faq/: page.tsx
app/journey/: page.tsx
app/login/: page.tsx
app/partnerships/: page.tsx
app/privacy/: page.tsx
app/profile/: layout.tsx  page.tsx
app/research/: loading.tsx  page.tsx
app/resources/: loading.tsx  page.tsx
app/services/: loading.tsx  page.tsx
app/shipping-returns/: page.tsx
components/: auth-status.tsx  cart-button.tsx  category-layout.tsx  clinical-trial-card.tsx  footer.tsx  main-nav.tsx  product-card.tsx  product-category-layout.tsx  product-filter-panel.tsx  profile-mobile-nav.tsx  publication-card.tsx  resource-category-layout.tsx  service-card.tsx  service-category-layout.tsx
docs/: PRODUCTION_DEPLOYMENT.md  PRODUCTION_DOMAIN_SETUP.md  README.md
lib/: api-utils.ts  database.types.ts  notifications.ts  supabase.ts
rust-solana-service/: Cargo.toml  Dockerfile
rust-solana-service/src/: blockchain.rs  database.rs  error.rs  main.rs  models.rs
(+86 files in other folders)
