[package]
name = "insideout-solana-service"
version = "0.1.0"
edition = "2021"

[dependencies]
solana-sdk = "1.18"
solana-client = "1.18"
solana-program = "1.18"
spl-token = "4.0"
spl-associated-token-account = "2.3"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
axum = "0.7"
tower = "0.4"
tower-http = { version = "0.5", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = "0.3"
anyhow = "1.0"
base64 = "0.22"
dotenv = "0.15"
reqwest = { version = "0.12", features = ["json"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
tokio-test = "0.4"
